Some stuff i did a while ago.